<resources>
    <string name="app_name">CalorieM8</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav Header -->
    <string name="nav_header_username">Username</string>
    <string name="nav_header_email">correo@email.com</string>
    <!-- Nav Header -->

    <!--  Drawer Menu Item Names  -->
    <string name="d_menu_home">Main</string>
    <string name="d_menu_profile">Profile</string>
    <string name="d_menu_exercise">Exercise</string>
    <string name="d_menu_result">Results</string>
    <string name="d_menu_achievements">Achievements</string>
    <string name="d_menu_routine">Routine</string>
    <string name="d_menu_goals">Goals</string>
    <string name="d_menu_scanner">Scanner</string>
    <string name="d_menu_version">Version</string>
    <string name="d_menu_sub_group_1_title">Account Options</string>
    <string name="d_menu_logout">Logout</string>
    <!--  Drawer Menu Item Names  -->

    <!-- activity_regiser layout -->
    <string name="reg_title">New Account</string>
    <string name="reg_username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_btn_sign_up">Sign Up</string>
    <string name="reg_logged_in">Already have an Account? Sign In here</string>
    <string name="reg_login">Sign In</string>
    <string name="reg_aboutYou">About You</string>
    <string name="reg_height">Height</string>
    <string name="reg_weight">Weight</string>
    <string name="reg_age">Age</string>
    <string name="reg_gender">Gender</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="reg_occupation">Occupation</string>
    <string name="reg_dob">Date of Birth</string>
    <string name="reg_dob_hint">MM/DD/YYYY</string>
    <!-- activity_regiser layout -->

    <!--  activity_login layout  -->
    <string name="login_title">Sign In with existing account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_account">Forgot Account?</string>
    <string name="login_btn_sign_in">Sign In</string>
    <string name="login_sign_up">Don\'t have an Account? Sign up here</string>
    <string name="login_btn_sign_up">Sign Up</string>
    <!--  activity_login layout  -->

    <!--  fragment_IMC layout  -->
    <string name="IMC">IMC</string>


    <!--  fragment_weight layout  -->
    <string name="weight">PESO</string>

    <!--  fragment_home layout  -->
    <string name="home_intake_calories">Calorie Intake</string>
    <string name="home_burn_calories">Burn calories</string>
    <string name="home_goal">Goal</string>
    <string name="home_title">Home</string>
    <!--  fragment_home layout  -->

    <!-- Exercise tracker layout   -->
    <string name="exercise_tracker_title">Exercise Tracker</string>
    <string name="crear_meta_title">Nueva Meta</string>
    <string name="exercise_burn_calories">Burned calories</string>
    <string name="exercise_consumed_calories">Consumed calories</string>
    <string name="exercise_list">Exercise:</string>
    <string name="exercise_burn_calories_example">Example: 256 Cal</string>
    <string name="exercise_consumed_calories_example">Example: 256 Cal</string>
    <string-array name="exercise_catalog">
        <item>Select one:</item>
        <item>Weight training</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Home workout</item>
        <item>Walking</item>
        <item>Yoga</item>
        <item>Swimming</item>
    </string-array>
    <string name="exercise_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_achievements">Daily Achievements</string>
    <string name="goals_distance">Distance</string>
    <!-- Exercise tracker layout   -->

    <string name="text_sample">In android, ScrollView is a kind of layout that is useful to add vertical or horizontal scroll bars to the content which is larger than the actual size of layouts such as linearlayout, relativelayout, framelayout, etc.
Generally, the android ScrollView is useful when we have content that doesn’t fit our android app layout screen. The ScrollView will enable a scroll to the content which is exceeding the screen layout and allow users to see the complete content by scrolling.
The android ScrollView can hold only one direct child. In case, if we want to add multiple views within the scroll view, then we need to include them in another standard layout like linearlayout, relativelayout, framelayout, etc.
To enable scrolling for our android applications, ScrollView is the best option but we should not use ScrollView along with ListView or Gridview because they both will take care of their own vertical scrolling.</string>
    <string name="goals_loss_weight">Loss weight</string>
    <string name="goals_water_qty">Glass of water</string>
    <string name="fh_sleep">Sleep</string>
    <string name="fh_exercise">Exercise</string>
    <string name="sym_plus">+</string>
    <string name="sym_minus">-</string>
    <string name="dayinfo_cal_gastadas">Burned Calories</string>
    <string name="dayinfo_cal_consumidas">Consumed Calories</string>
    <string name="dayinfo_calorias">Calories</string>
    <string name="dayinfo_sleep">Sleep</string>
    <string name="horas_promedio_dormir">Average Sleep Hours</string>
    <string name="horas_dormidas_extra">Extra Sleep Hours</string>
    <string name="dayinfo_man_weight_title">Weight</string>
    <string name="dayinfo_man_weight_msg">How much do you weigh today?</string>
    <string name="d_menu_diet">Diet</string>
    <string name="frml_btn_add_food">Add Food</string>
    <string name="frml_btn_delete_all">Delete All</string>
    <string name="servings">Servings:</string>
    <string name="calories">Calories:</string>
    <string name="fat">Fat:</string>
    <string name="carbs">Carbs:</string>
    <string name="fiber">Fiber:</string>
    <string name="protein">Protein:</string>
    <string name="burned_calories_based_on_mbr">Burned Calories Based on MBR</string>
    <string name="exercise_start_time">Example: 11:45 AM</string>
    <string name="exercise_end_time">Example: 01:20 PM</string>
    <string name="et_food_example">Example: Corn Flakes Cereal</string>
    <string name="tv_serving_grams">Serving (Grams)</string>
    <string name="tv_food_calories">Calories</string>
    <string name="tv_fat_grams">Fat (Grams)</string>
    <string name="tv_carbs_grams">Carbs (Grams)</string>
    <string name="tv_fiber_grams">Fiber (Grams)</string>
    <string name="tv_protein_grams">Protein (Grams)</string>
    <string name="tv_food_name">Food Name</string>
    <string name="example_username">username@mail.com</string>
    <string name="johndoe">JohnDoe</string>
    <string name="eg_180_cm">Eg. 180 cm</string>
    <string name="eg_85_kg">Eg. 85 kg</string>

</resources>
