<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/d_menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/d_menu_profile" />

        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/d_menu_exercise" />

        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/result"
            android:title="@string/d_menu_IMC" />

        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/goal"
            android:title="@string/d_menu_achievements" />

        <item
            android:id="@+id/nav_routine"
            android:icon="@drawable/routine"
            android:title="@string/d_menu_routine" />

        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/flag"
            android:title="@string/d_menu_goals" />

        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scanner"
            android:title="@string/d_menu_scanner" />

        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_info"
            android:title="@string/d_menu_version" />

    </group>

    <item android:title="@string/d_menu_sub_group_1_title">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/d_menu_logout" />
        </menu>
    </item>
</menu>