<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_marginTop="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_email"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:textColor="@color/gold"/>

        <EditText
            android:id="@+id/frp_email"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:background="@drawable/input_field_square"
            android:layout_marginEnd="100sp"
            android:layout_marginStart="20sp"
            android:hint="@string/example_username"
            android:inputType="none"
            tools:ignore="TextFields" />

        <TextView
            android:layout_marginTop="25sp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_username"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:textColor="@color/gold"/>

        <EditText
            android:id="@+id/frp_username"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:background="@drawable/input_field_square"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="100dp"
            android:hint="@string/johndoe"
            android:inputType="none"/>

        <TextView
            android:layout_marginTop="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/reg_gender"
            android:fontFamily="@font/regular"
            android:textSize="18sp"
            android:textColor="@color/gold"/>

        <Spinner
            android:id="@+id/frp_inputGender"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/input_field_square"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="100sp"
            android:layout_marginStart="20sp"
            android:prompt="@string/reg_gender"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:textColor="@color/gold"
            android:fontFamily="@font/regular"
            android:layout_marginStart="35dp"
            android:textSize="18sp"
            android:text="@string/reg_height" />

        <EditText
            android:id="@+id/frp_inputHeight"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:background="@drawable/input_field_square"
            android:layout_marginEnd="100sp"
            android:layout_marginStart="20sp"
            android:inputType="numberDecimal"
            android:hint="@string/eg_180_cm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/gold"
            android:textSize="18sp"
            android:layout_marginStart="35dp"
            android:text="@string/reg_weight" />

        <EditText
            android:id="@+id/frp_inputWeight"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:background="@drawable/input_field_square"
            android:layout_marginEnd="100sp"
            android:layout_marginStart="20sp"
            android:hint="@string/eg_85_kg"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/gold"
            android:textSize="18sp"
            android:text="@string/reg_dob" />

        <EditText
            android:id="@+id/et_frp_odb"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="100sp"
            android:layout_marginStart="20sp"
            android:background="@drawable/input_field_square"
            android:hint="@string/reg_dob_hint"
            android:inputType="date" />

        <ProgressBar
            android:id="@+id/frp_pdata_pbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/frp_btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="100sp"
            android:textAllCaps="false"
            android:fontFamily="@font/semibold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/gold_button"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>