<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".AddNewFoodFragment">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center|bottom"
            android:textSize="30sp"
            android:padding="8dp"
            android:fontFamily="@font/semibold"
            android:textColor="@color/white"
            android:text="Add New Food Item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textSize="20sp"
            android:fontFamily="@font/regular"
            android:textColor="@color/white"
            android:id="@+id/fanf_tv_num_rows"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_food_name"/>

            <EditText
                android:fontFamily="@font/regular"
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="37dp"
                android:hint="Eg. Corn Flakes"
                android:inputType="text"
                android:id="@+id/fanf_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_serving_grams"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:hint="Example: 100"
                android:inputType="number"
                android:id="@+id/fanf_serving"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_food_calories"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="64dp"
                android:hint="Example: 399"
                android:inputType="number"
                android:id="@+id/fanf_calories"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_fat_grams"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="36dp"
                android:hint="Example: 0.3"
                android:inputType="numberDecimal"
                android:id="@+id/fanf_fat"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_carbs_grams"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="14dp"
                android:hint="Example: 88.8"
                android:inputType="numberDecimal"
                android:id="@+id/fanf_carbs"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_fiber_grams"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:hint="Example: 1.1"
                android:inputType="numberDecimal"
                android:id="@+id/fanf_fiber"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/light"
                android:textColor="@color/white"
                android:text="@string/tv_protein_grams"/>

            <EditText
                android:background="@drawable/input_field_square"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginStart="3dp"
                android:hint="Example: 7.7"
                android:inputType="numberDecimal"
                android:id="@+id/fanf_protein"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/regular"
                android:background="@drawable/gold_button"
                android:text="@string/frml_btn_delete_all"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_margin="16dp"
                android:id="@+id/fanf_btnDeleteAll"/>

            <Button
                android:layout_width="150dp"
                android:fontFamily="@font/regular"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/gold_button"
                android:text="@string/exercise_submit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_margin="16dp"
                android:id="@+id/fanf_btnSubmit"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
